# nhl-lakehouse

./: .gitignore
.github/workflows/: build-image.yml  build-silver-image.yml  build-spark-image.yml  build-viz-image.yml  ci.yml  deploy.yml  silver-tests.yml  spark-tests.yml
infra/: .terraform.lock.hcl  README.md  argo-workflows.tf  ci.tf  github-runner.tf  ingest-backfill.tf  lakekeeper-bootstrap.tf  lakekeeper.tf  main.tf  namespace.tf  postgres.tf  seaweedfs.tf  secrets.tf  spark-operator.tf  spark-rbac.tf  variables.tf  versions.tf  viz.tf
ingest/: Dockerfile  go.mod  go.sum
ingest/cmd/ingest/: main.go
ingest/internal/bronze/: writer.go  writer_test.go
ingest/internal/manifest/: manifest.go  manifest_test.go
ingest/internal/nhl/: client.go  client_test.go
ingest/internal/season/: season.go  season_test.go
silver/: Dockerfile  README.md  common.py  entrypoint.sh  pyproject.toml
silver/jobs/: game_rosters.py  games.py  players.py  plays.py
silver/k8s/: silver-game-rosters.yaml  silver-games.yaml  silver-players.yaml  silver-plays.yaml  silver-teams.yaml
silver/tests/: conftest.py  game_rosters_test.py  players_test.py  plays_test.py  teams_test.py
silver/tests/fixtures/: sample_pbp.json  sample_pbp_game2.json
silver/tools/: check_game_rosters.py  verify_silver.py
spark/: Dockerfile  README.md  pyproject.toml
spark/jobs/: common.py
spark/jobs/bronze/: recover_attempts_from_bronze.py  tracking_ingest.py
spark/jobs/gold/: goal_tracking_sequences.py  goal_tracking_status.py  player_shots.py
spark/jobs/silver/: games.py  players.py  teams.py  tracking_frames.py
spark/k8s/bronze/: bronze-recover-tracking-attempts.yaml  bronze-tracking-ingest.yaml
spark/k8s/gold/: gold-goal-tracking-sequences.yaml  gold-goal-tracking-status.yaml  gold-player-shots.yaml
spark/k8s/silver/: silver-game-rosters.yaml  silver-games.yaml  silver-players.yaml  silver-plays.yaml  silver-teams.yaml  silver-tracking-frames.yaml
spark/tests/: conftest.py  goal_tracking_sequences_test.py  goal_tracking_status_test.py  player_shots_test.py  players_test.py  tracking_attempts_dedup_test.py  tracking_fetch_test.py  tracking_frames_test.py
spark/tests/fixtures/: sample_pbp.json  sample_pbp_game2.json  sample_pbp_game3.json  sample_tracking_ev274.json
spark/tools/: check_game_rosters.py  lakehouse_shell.py  verify_silver.py
viz/: Dockerfile  README.md  app.py  lib.py  pyproject.toml
viz/.streamlit/: config.toml
viz/pages/: 2_Pipeline_Health.py
workflows/: README.md
workflows/templates/: silver-full-rebuild.yaml  silver-single-table.yaml
workflows/workflows/: silver-full-rebuild-example.yaml  silver-games-example.yaml
