[project]
name = "nhl-lakehouse-spark"
version = "0.1.0"
description = "PySpark transformations producing silver and gold Iceberg tables."
requires-python = ">=3.12"
dependencies = [
    "pyspark==3.5.7",
    # bronze.tracking_ingest fetches tracking JSON from wsr.nhle.com (requests)
    # and writes it to SeaweedFS (boto3). Existing JVM-side s3a configs don't
    # apply to a Python boto3 client, so this job carries its own HTTP/S3 stack.
    "requests==2.32.3",
    "boto3==1.35.36",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import order)
    "B",   # bugbear (common bug patterns)
    "UP",  # pyupgrade (modern syntax)
    "RUF", # ruff-specific
]

[tool.ruff.lint.isort]
# jobs/ subdirs are copied into the image with PYTHONPATH=/opt/jobs, so
# jobs do `from common import ...` (common.py at jobs root) and tests
# do `from games import ...` (silver/* on sys.path via conftest). Declare
# the module names explicitly so isort groups them as first-party rather
# than alphabetizing them in with pyspark.
known-first-party = ["common", "games", "plays", "players", "game_rosters", "teams", "player_shots", "tracking_ingest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
