[project]
name = "nhl-lakehouse-viz"
version = "0.1.0"
description = "Streamlit dashboard reading gold tables from the NHL lakehouse."
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40",
    "plotly>=5.24",
    "pyiceberg[s3fs,pyarrow]>=0.8",
    "duckdb>=1.1",
    "pandas>=2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "RUF",
]
